# quip-export

./: .gitignore  1  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  sast.yml
docs/: architecture.md  commands.md  getting-started.md  known-issues.md  requirements.md  resilience.md  security.md
docs/release-notes/: LATEST.md  RELEASE-2026-06-10-5e771c1.md
quip-backup/: duplicates.md  exports.md  folders.md  objects.md  run_state.md
quip-backup/DieQuaSwa/Church/Home Bible Studies/: 2025-01-05 Bible Study.docx  2025-01-12 Bible Study.docx
quip-backup/DieQuaSwa/Hobbies/: LandRover Defender.docx  UTV.docx
quip-backup/DieQuaSwa/Hobbies/Model Railroad/: G Scale.docx  Z Scale.docx
quip-backup/DieQuaSwa/House and Yard/: Backyard storage boxes.docx  Garage Shoe shelves.docx  Garage Storage solution.docx
quip-backup/DieQuaSwa/Parents Only/: To-Do changes Juliet.docx  ToDo.docx
quip-backup/DieQuaSwa/Vacations/: 2026 Trip destinations.xlsx  Desired destinations.xlsx  Trip dates and costs.xlsx
quip-backup/DieQuaSwa/Vacations/Camping/: Sites.xlsx  (+2 more)
quip-backup/Private/: 2025-01-05 Everett Apartment.docx  Christmas.docx  Clarice.docx  F-150 Forscan settings.docx  Job application tracker.xlsx  Juliet PLU Portfolio Class Assignment collection.xlsx  N404 LuteTank - Health access for underserved communities.docx  PLU Portfolio to adjust.docx  Promise to do better.docx  Slide Notes.docx  Smart LEDs mit Mikrocontroller.docx  Stock Watch.docx  Work lineup.docx
quip-backup/Private/Juliet Birthday 2018/: Party Plan.xlsx
quip-backup/Private/Juliet Birthday 2021/: Fancy clothing links.docx
quip-backup/Private/Will Henner/: 2023-11-18 Will Data Collection.docx
scripts/: generate-docs.py
src/quip_export/: __init__.py  __main__.py  auth.py  cli.py  client.py  discovery.py  exporter.py  fs.py  models.py  run_logger.py  tracking.py
src/quip_export/formats/: __init__.py  docx.py  markdown.py  pdf.py  pptx.py  xlsx.py
tests/: conftest.py  test_client.py  test_exporter.py  test_formats.py
tests/functional/: test_sync_functional.py
tests/integration/: test_sync_pipeline.py
tests/nonfunctional/: test_resilience.py
tests/unit/: conftest.py  test_auth.py  test_client.py  test_discovery_folders.py  test_discovery_objects.py  test_duplicates_report.py  test_export_docx.py  test_export_markdown.py  test_export_multi_folder.py  test_export_pdf.py  test_export_pptx.py  test_export_xlsx.py  test_format_mapping.py  test_fs.py  test_retry.py  test_run_logger.py  test_sync_cli.py  test_tracking.py
(+310 files in other folders)
