[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quip-export"
version = "0.1.0"
description = "Export Quip documents to Markdown, DOCX, and PDF"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "markdownify>=0.13",
    "python-docx>=1.1",
    "weasyprint>=62",
]

[project.scripts]
quip-export = "quip_export.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quip_export"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quip_export --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
